404 error handling and redirecting views

--- a/adoption/templates/pet_detail.html
+++ b/adoption/templates/pet_detail.html
@@ -24,4 +24,6 @@
   <p>Submission date: {{ pet.submission_date|date:"M d Y" }}</p>
   <p>{{ pet.description }}</p>
 </div>
+<div> <h6> For adoption or any query please contact us at 9896444959 along with pet id: {{pet.id}}</h6>
+</div>
 {% endblock %}
